# stack_machine

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: example.alg
src/: isa.py  machine.py  translator.py
src/compiler/: cli.py  compile.py  lexer.py  tokens.py  translator.py
tests/: golden_test.py
tests/golden/: cat.yaml  double_arith.yaml  hello.yaml  hello_user_name.yaml  palindrome.yaml  sort.yaml
