[project]
name = "stack-machine"
version = "0.1.0"
description = ""
authors = [
    {name = "Попов Дмитрий",email = "d.y.popov@tbank.ru"}
]
readme = "README.md"
requires-python = "^3.9"
dependencies = [
    "pytest-golden (>=0.2.2,<0.3.0)",
    "poetry-core (>=2.0.0,<3.0.0)",
    "pytest (>=6.2.5)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
ruff = "^0.11.11"
mypy = "^1.15.0"

[tool.ruff]
line-length = 120
select = ["E", "F", "W", "I"]
ignore = []

[tool.mypy]
strict = true
disallow_untyped_defs = true
